<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="movie_title" />
    <string name="title_activity_detail">DetailActivity</string>
    <string name="movie_backdrop_content_description">Movie backdrop image</string>
    <string name="movie_rating_denominator">/10</string>
    <string name="sort_by_label_popularity">Popularity</string>
    <string name="sort_by_options">Sort by</string>
    <string name="sort_by_label_rating">Rating</string>
    <string name="release_date_label">Release Date</string>
    <string name="reviews_label">User Reviews</string>
    <string name="video_label">Videos</string>
    <string name="videos_label">Trailers</string>
    <string name="favorite_button">Favorite</string>
    <string name="movie_poster_content_description">Movie Poster</string>
    <string name="movie_rating_label">User Rating</string>
    <string name="movie_synopsis_label">Synopsis</string>
    <string name="no_videos_available">No videos found</string>
    <string name="no_reviews_available">No user reviews available</string>
    <string name="action_share">Share</string>
    <string name="no_movie_selected_warning">Select a movie!</string>
    <string name="sort_by_label_favorites">Favorites</string>
</resources>
