<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/sort_by_options"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort_by_options"
        app:showAsAction="always">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_sort_by_popularity"
                    android:checked="true"
                    android:title="@string/sort_by_label_popularity" />
                <item
                    android:id="@+id/action_sort_by_rating"
                    android:title="@string/sort_by_label_rating" />
                <item
                    android:id="@+id/action_sort_by_favorites"
                    android:title="@string/sort_by_label_favorites" />
            </group>
        </menu>
    </item>
</menu>
