<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_fragment_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DetailFragment">

    <include
        layout="@layout/movie_backdrop_and_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/detail_fragment_movie_info_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/event_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:src="@drawable/ic_event" />

                <TextView
                    android:id="@+id/detail_fragment_movie_release_date_textview"
                    style="@style/MovieReleaseDateFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/event_icon"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/release_date_label" />

                <TextView
                    android:id="@+id/detail_fragment_movie_release_date_label"
                    style="@style/MovieDetailsLabelFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_fragment_movie_release_date_textview"
                    android:layout_toRightOf="@id/event_icon"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/release_date_label" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/star_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:src="@drawable/ic_star_outline" />

                <TextView
                    android:id="@+id/detail_fragment_movie_rating_textview"
                    style="@style/MovieRatingFont"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/star_icon"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp" />

                <TextView
                    android:id="@+id/detail_fragment_movie_rating_denominator_textview"
                    style="@style/MovieRatingDenominatorFont"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignBaseline="@id/detail_fragment_movie_rating_textview"
                    android:layout_toRightOf="@id/detail_fragment_movie_rating_textview"
                    android:gravity="bottom"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/movie_rating_denominator" />

                <TextView
                    android:id="@+id/detail_fragment_movie_rating_label"
                    style="@style/MovieDetailsLabelFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_fragment_movie_rating_textview"
                    android:layout_toRightOf="@id/star_icon"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/movie_rating_label" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/detail_fragment_poster_imageview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_content_description"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:src="@drawable/ic_local_movies" />

        <TextView
            android:id="@+id/detail_fragment_movie_synopsis_label"
            style="@style/MovieDetailsLabelFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/movie_icon"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/movie_synopsis_label" />

        <TextView
            android:id="@+id/detail_fragment_movie_synopsis_textview"
            style="@style/MovieSynopsisFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_fragment_movie_synopsis_label"
            android:layout_toRightOf="@id/movie_icon"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp" />
    </RelativeLayout>

</LinearLayout>